Finished the simple implementation of #1 problem: "Two Sum"

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,12 +16,12 @@
     </script>
 
     <!-- source files -->
-    <script type="text/javascript" src="src/coderbyte_firstReversal.js"></script>
+    <script type="text/javascript" src="src/leetcode_twoSum_1.js"></script>
   
 
 
     <!-- spec files -->
-    <script type="text/javascript" src="spec/coderbyte_firstReversalSpec.js"></script>
+    <script type="text/javascript" src="spec/leetcode_twoSumSPec_1.js"></script>
 
   </head>
   <body>
