--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,12 +17,11 @@
 
     <!-- source files -->
     <script type="text/javascript" src="src/leetcode_twoSum_1.js"></script>
-  
+    <script type="text/javascript" src="src/leetcode_twoSum_2.js"></script>
 
 
     <!-- spec files -->
     <script type="text/javascript" src="spec/leetcode_twoSumSPec_1.js"></script>
-
   </head>
   <body>
     <div id="mocha"></div>
